# silo-foundry-utils

./: .gitignore  .solhint.json  CHANGELOG.md  Cargo.toml  LICENCE  README.md  foundry.toml  package.json  remappings.txt
.github/workflows/: forge.yml  rust.yml
bash/: build-for-tests.sh  kill-anvil.sh  run-anvil.sh
contracts/deployer/: Deployer.sol  DeployerCommon.sol  IDeployerSharedMemory.sol  Vyper.sol
contracts/key-value/: KeyValueStorage.sol
contracts/lib/: AddrLib.sol  ChainsLib.sol  Deployments.sol  Utils.sol  VmLib.sol
contracts/networks/: Chains.sol  IntegrationTest.sol
contracts/networks/addresses/: AddressesCollection.sol  AddressesCollectionImpl.sol  AddressesCollectionImplWrapper.sol  AddressesCollectionStorage.sol  EthereumAddresses.sol  IAddressCollection.sol  IAddressesCollectionImpl.sol
docs/: SharedAddressesSpace.md  SolidityDeploymentsSync.md  VyperDeployer.md
src/: main.rs
src/commands/: mod.rs  sync.rs
src/commands/deployments/: sync.rs
src/commands/key_val_json/: read.rs  write.rs
test/addresses/: AddressesCollectionTest.sol
test/addresses/mocks/: A.sol  B.sol
test/deployer/: Solidity.t.sol  Vyper.t.sol  _common.sol
test/deployer/deployments-scripts/: DeployCounter.s.sol  SolidityCounterDeploy.s.sol  VyperCounterDeploy.s.sol  _CommonDeploy.sol
test/deployer/mocks/: Counter.sol  Counter.vy  ICounter.sol
